<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EnhancedListView Demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="reset_items">Reset items</string>
    <string name="settings">Settings</string>
    <string name="action_done">Done</string>
    <string name="pref_undo_style">Undo Style</string>
    <string name="pref_undo_style_title">Select Undo Style</string>
    <string name="pref_swipe_direction">Swipe Direction</string>
    <string name="pref_swipe_direction_title">Select Swipe Direction</string>
    <string name="pref_general">General</string>
    <string name="pref_swipe_to_dismiss">Swipe to Dismiss</string>
    <string name="enable">Enabled</string>
    <string name="list_item_background">Don\'t swipe whole list item</string>
    <string name="pref_swipelayout">Swipe Layout</string>

</resources>
