<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <de.timroes.android.listview.EnhancedListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <ScrollView
        android:layout_gravity="right"
        android:background="#fff3f3f3"
        android:layout_height="match_parent"
        android:layout_width="240dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">
            <TextView android:text="@string/pref_general"
                style="@style/SectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button android:id="@+id/reset_adapter"
                android:onClick="resetItems"
                android:gravity="left|center_vertical"
                android:background="?selectableItemBackground"
                android:text="@string/reset_items"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="48dp" />
            <Button android:id="@+id/pref_undostyle"
                android:gravity="left|center_vertical"
                android:onClick="selectUndoStyle"
                android:text="@string/pref_undo_style"
                style="@android:style/TextAppearance.Medium"
                android:background="?selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="48dp" />
            <TextView
                android:text="@string/pref_swipe_to_dismiss"
                style="@style/SectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <CheckBox android:id="@+id/pref_swipetodismiss"
                    style="@android:style/TextAppearance.Medium"
                    android:text="@string/enable"
                    android:layout_marginBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            <CheckBox android:id="@+id/pref_swipelayout"
                style="@android:style/TextAppearance.Medium"
                android:text="@string/pref_swipelayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button android:id="@+id/pref_swipedirection"
                android:gravity="left|center_vertical"
                android:onClick="selectSwipeDirection"
                android:text="@string/pref_swipe_direction"
                style="@android:style/TextAppearance.Medium"
                android:background="?selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

    </LinearLayout>
    </ScrollView>
</android.support.v4.widget.DrawerLayout>
