<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <de.timroes.android.listview.EnhancedRecyclerListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="#fff3f3f3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="4dp">

            <TextView
                style="@style/SectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_general" />

            <Button
                android:id="@+id/reset_adapter"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="?selectableItemBackground"
                android:gravity="left|center_vertical"
                android:onClick="resetItems"
                android:text="@string/reset_items" />

            <Button
                android:id="@+id/pref_undostyle"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="?selectableItemBackground"
                android:gravity="left|center_vertical"
                android:onClick="selectUndoStyle"
                android:text="@string/pref_undo_style" />

            <TextView
                style="@style/SectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_swipe_to_dismiss" />

            <CheckBox
                android:id="@+id/pref_swipetodismiss"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/enable" />

            <CheckBox
                android:id="@+id/pref_swipelayout"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_swipelayout" />

            <Button
                android:id="@+id/pref_swipedirection"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="?selectableItemBackground"
                android:gravity="left|center_vertical"
                android:onClick="selectSwipeDirection"
                android:text="@string/pref_swipe_direction" />

        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.DrawerLayout>
